<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/black">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="6dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/grey_60">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/img_movie"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/img_movie"
                app:layout_constraintTop_toTopOf="@+id/img_movie">

                <TextView
                    android:id="@+id/txt_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/txt_tipo"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="@string/f_detail_anime_title" />

                <TextView
                    android:id="@+id/txt_tipo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/f_include_detail_anime_popularity"
                    android:textColor="@color/grey_10"
                    android:textSize="12sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txt_title" />

                <RatingBar
                    android:id="@+id/rating_anime_detail"
                    style="@style/Widget.AppCompat.RatingBar.Indicator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:numStars="5"
                    android:rating="0"
                    android:stepSize="0.5"
                    app:layout_constraintBottom_toTopOf="@+id/constraintLayout3"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txt_tipo" />


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent">

                    <TextView
                        android:id="@+id/txt_popularity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:textColor="@color/white"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        tools:text="75%" />

                    <ImageView
                        android:id="@+id/imageView10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        app:layout_constraintBottom_toBottomOf="@+id/txt_popularity"
                        app:layout_constraintStart_toEndOf="@+id/txt_popularity"
                        app:layout_constraintTop_toTopOf="@+id/txt_popularity"
                        app:srcCompat="@drawable/ic_linea_blanca"
                        tools:ignore="ContentDescription"/>

                    <TextView
                        android:id="@+id/txt_release_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:textColor="@color/white"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="@+id/txt_popularity"
                        app:layout_constraintStart_toEndOf="@+id/imageView10"
                        app:layout_constraintTop_toTopOf="@+id/txt_popularity"
                        tools:text="22/12/22" />


                    <ImageView
                        android:id="@+id/imageView11"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        app:layout_constraintBottom_toBottomOf="@+id/imageView10"
                        app:layout_constraintStart_toEndOf="@+id/txt_release_date"
                        app:layout_constraintTop_toTopOf="@+id/imageView10"
                        app:srcCompat="@drawable/ic_linea_blanca"
                        tools:ignore="ContentDescription"/>

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:text="@string/f_include_detail_anime_type"
                        android:textColor="@color/white"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toEndOf="@+id/imageView11"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/txt_lenguaje"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="2dp"
                        android:textColor="@color/white"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toEndOf="@+id/textView2"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="Ingles-Español" />
                </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>

            <ImageView
                android:id="@+id/img_movie"
                android:layout_width="100dp"
                android:layout_height="150dp"
                android:layout_marginStart="4dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@drawable/ic_launcher_background"
                tools:ignore="ContentDescription"/>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>